tests/dependent/should_fail/T15308.stderr

T15308.hs:13:5: error: [GHC-39999]
    • No instance for ‘Show (Foo a f)’ arising from a use of ‘show’
    • In the expression: show
      In an equation for ‘f’: f = show
